feat(trivia): Complete game flow with countdown, scoring, and round management
FEATURES:
- Countdown visual entre rondas con timing configurable
- Sistema híbrido de race conditions con locks
- Validación de rondas obsoletas (from_round)
- Pantalla de resultados finales con ranking
- Configuración personalizable de preguntas por partida
- Detección automática de fin de juego

EVENTS:
- PlayerLockedEvent: cuando un jugador responde
- PlayerUnlockedEvent: cuando se desbloquea un jugador
- PlayersUnlockedEvent: cuando se resetea la ronda
- GameEndedEvent: cuando el juego termina con ranking

REFACTOR:
- Movidos apiProcessAction y apiNextRound a PlayController
- apiGetState permanece en RoomController (info general de sala)
- Separación clara: RoomController (sala/lobby) vs PlayController (gameplay)
- PlayerStateManager centraliza lógica de bloqueos
- RoundManager maneja timing entre rondas sin lógica de juego
- TurnManager limpio sin lógica de equipos/eliminaciones

FIXES:
- isGameComplete() usa >= en lugar de >
- RoundManager no avanza ronda en completeRound()
- handleNewRound() verifica fin de juego antes de avanzar
- game_settings se guarda correctamente (questions_per_game, etc)
- Scoring system usa TriviaScoreCalculator
- Frontend envía from_round para validación
- Backup job deshabilitado (requiere queue asíncrono)

CONVENTIONS:
- Sin consultas directas a BD en controladores de juego
- Módulos responsables de su propia lógica
- BaseGameEngine sin lógica específica de juegos
- Sistema de locks para prevenir race conditions

--- a/games/trivia/config.json
+++ b/games/trivia/config.json
@@ -96,7 +96,7 @@
       "time_limit": 15
     },
     "scoring_system": {
-      "enabled": false,
+      "enabled": true,
       "track_history": true,
       "allow_negative_scores": false
     },
