--- a/games/mockup/config.json
+++ b/games/mockup/config.json
@@ -1,30 +1,45 @@
 {
+  "name": "Mockup Game",
+  "slug": "mockup",
+  "version": "1.0.0",
+  "description": "Juego mockup para testing y validación de BaseGameEngine",
+  
+  "timing": {
+    "round_ended": {
+      "type": "countdown",
+      "seconds": 3
+    }
+  },
+  
   "modules": {
-    "guest_system": {
-      "enabled": true,
-      "allow_guests": true,
-      "guest_name_prefix": "Guest"
-    },
-    "turn_system": {
-      "enabled": true,
-      "mode": "sequential",
-      "time_limit_seconds": null
-    },
     "scoring_system": {
-      "enabled": true,
-      "score_type": "points",
-      "winning_condition": "highest_score"
-    },
-    "teams_system": {
-      "enabled": false,
-      "default_mode": "team_turns",
-      "allow_self_selection": false
-    },
-    "timer_system": {
-      "enabled": false
+      "enabled": true
     },
     "round_system": {
+      "enabled": true
+    },
+    "turn_system": {
       "enabled": false
+    },
+    "player_state": {
+      "enabled": true
     }
+  },
+  
+  "turn_mode": "simultaneous",
+  
+  "customizableSettings": {
+    "rounds": {
+      "type": "number",
+      "label": "Número de rondas",
+      "default": 3,
+      "min": 1,
+      "max": 10
+    }
+  },
+  
+  "scoring": {
+    "action_points": 10,
+    "description": "10 puntos por participar en cada ronda"
   }
 }
